--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Henri K",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "mongoose": "^8.2.1",
     "notenv": "^2.0.3"
