--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "notenv": "^2.0.3"
   },
   "devDependencies": {
+    "@eslint/js": "^9.0.0",
+    "@stylistic/eslint-plugin-js": "^1.7.0",
+    "eslint": "^9.0.0",
+    "globals": "^15.0.0",
     "nodemon": "^3.1.0"
   }
 }
