--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Backend notes -React sovellukseen",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "NODE_ENV=production node index.js",
+    "dev": "NODE_ENV=development nodemon index.js",
+    "test": "NODE_ENV=test node --test",
     "build:ui": "rm -rf dist && cd ../notes && npm run build && cp -r dist ../backend-notes",
     "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push"
   },
