--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@stylistic/eslint-plugin-js": "^1.7.0",
     "eslint": "^9.0.0",
     "globals": "^15.0.0",
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "supertest": "^7.0.0"
   }
 }
